# logtrains

./: .gitignore  Cargo.toml  DEV_PLAN.md  README.md
src/: llm.rs  main.rs
