[package]
name = "logtrains"
version = "0.1.0"
edition = "2021"
description = "AI-powered log analysis tool using local LLMs"
license = "MIT"
keywords = ["log", "ai", "llm", "cli", "analysis"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
tokio = { version = "1", features = ["full"] }

# Machine Learning / Candle
candle-core = "0.8.2"
candle-nn = "0.8.2"
candle-transformers = "0.8.2"
tokenizers = "0.21.0"
hf-hub = "0.4.1" # To download models from HuggingFace

# Utilities
dirs = "6.0" # To find home directory/cache location
colored = "3.0" # For pretty output
atty = "0.2.14"
duct = "0.13.6"
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.42"
